[project]
name = "dpsprep"
version = "2.5.4"
description = "A DjVu to PDF converter with a focus on small output size and the ability to preserve document outlines and text layers"
requires-python = ">=3.11, <4.0"
authors = [
  { name = "Kevin Arthur Schiff Croker" },
  { name = "Ianis Vasilev", email = "ianis@ivasilev.net" }
]
license = "GPL-3.0-or-later"
dependencies = [
  "click (>=8)",
  "djvulibre-python (>=0.9.3)",
  "fpdf2 (>=2.8)",
  "loguru (>=0.7)",
  "pdfrw (>=0.4)",
  "pillow (>=12.2.0)"
]

[project.urls]
Repository = "https://github.com/kcroker/dpsprep.git"
Changelog = "https://github.com/kcroker/dpsprep/blob/master/CHANGELOG.md"

[project.optional-dependencies]
compress = [
  "ocrmypdf (>=17)"
]

[project.scripts]
dpsprep = "dpsprep:dpsprep"

[dependency-groups]
dev = [
  "mypy (>=1.19)",
  "pytest (>=9.0.3)",
  "ruff (>=0.15)",
  "types-fpdf2 (>=2.8.4.20260322)"
]

[build-system]
# uv build complains if no upper bound is set, but it updates its minor versions often, so we put a major version just to shut it up
requires = ["uv_build (>=0.10, <1)"]
build-backend = "uv_build"

# uv
[tool.uv]
resolution = "lowest-direct"

[tool.uv.build-backend]
module-root = ""  # uv-build expects the code to be in src/dpsprep, but I did not want to move it when migrating to uv

# pytest
[tool.pytest.ini_options]
addopts = "--capture tee-sys"

# ruff
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "A",     # flake8-builtins
  "ANN",   # flake8-annotations
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C4",    # flake8-comrehensions
  "C90",   # mccabe
  "COM",   # flake8-commas
  "E",     # pycodestyle error
  "F",     # pyflakes
  "FURB",  # refurb
  "I",     # isort
  "INP",   # flake8-no-pep420
  "N",     # pep8-naming
  "PERF",  # perflint
  "PL",    # pylint
  "PT",    # flake8-pytest-style
  "PTH",   # flake8-use-pathlib
  "Q",     # flake8-quotes
  "RUF",   # ruff
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "TC",    # flake8-type-checking
  "TRY",   # tryceratops
  "UP",    # pyupgrade
  "W",     # pycodestyle warning
]
ignore = [
  "E501",    # line-too-long
  "PLC1901", # compare-to-empty-string
  "PLR6301", # no-self-use
  "PTH123",  # builtin-open
  "RUF001", "RUF002", "RUF003", # ambiguous-unicode-character-{string,docstring,comment}
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "PLR2004"]

# mypy
[tool.mypy]
packages = ["dpsprep"]

[[tool.mypy.overrides]]
module = [
  "djvu.*",
  "ocrmypdf.*",
  "pdfrw.*"
]
ignore_missing_imports = true
