[project]
name = "dpsprep"
version = "2.5.4"
description = "A DjVu to PDF converter with a focus on small output size and the ability to preserve document outlines and text layers"
requires-python = ">=3.11, <4.0"
authors = [
  { name = "Kevin Arthur Schiff Croker" },
  { name = "Ianis Vasilev", email = "ianis@ivasilev.net" }
]
license = "GPL-3.0-or-later"
dependencies = [
  "click (>=8)",
  "djvulibre-python (>=0.9.3)",
  "fpdf2 (>=2.8)",
  "loguru (>=0.7)",
  "pdfrw (>=0.4)",
  "pillow (>=12.2.0)",
]

[project.urls]
Repository = "https://github.com/kcroker/dpsprep.git"
Changelog = "https://github.com/kcroker/dpsprep/blob/master/CHANGELOG.md"

[project.optional-dependencies]
compress = [
  "ocrmypdf (>=17)"
]

[project.scripts]
dpsprep = "dpsprep:dpsprep"

[dependency-groups]
dev = [
  "click-man (>=0.5.1)",
  "mypy (>=1.19)",
  "pytest (>=9.0.3)",
  "ruff (>=0.15)",
  "types-fpdf2 (>=2.8.4.20260322)"
]

[build-system]
# uv build complains if no upper bound is set, but it updates its minor versions often, so we put a major version just to shut it up
requires = ["uv_build (>=0.10, <1)"]
build-backend = "uv_build"

# uv
[tool.uv]
resolution = "lowest-direct"

# pytest
[tool.pytest.ini_options]
addopts = "--capture tee-sys"

# ruff
[tool.ruff]
extend = "./ruff_config/ruff.toml"

[tool.ruff.lint]
extend-ignore = [
  "D1", # undocumented-*
]

# mypy
[tool.mypy]
packages = ["dpsprep"]

[[tool.mypy.overrides]]
module = [
  "djvu.*",
  "ocrmypdf.*",
  "pdfrw.*"
]
ignore_missing_imports = true
