[project]
name = "dpsprep"
version = "2.6.4"
description = "A DjVu to PDF converter with a focus on small output size and the ability to preserve document outlines and text layers"
requires-python = ">=3.11, <4.0"
authors = [
  { name = "Kevin Arthur Schiff Croker" },
  { name = "Ianis Vasilev", email = "ianis@ivasilev.net" }
]
license = "GPL-3.0-or-later"
dependencies = [
  "click (>=8)",
  "djvulibre-python (>=0.9.3)",
  "fpdf2 (>=2.8)",
  "pdfrw (>=0.4)",
  "pillow (>=12.2.0)",
  "rich (>=13)",
  "typing_extensions (>=4.5.0); python_version < '3.12'",
]

[project.urls]
Repository = "https://github.com/kcroker/dpsprep.git"
Changelog = "https://github.com/kcroker/dpsprep/blob/master/CHANGELOG.md"
Documentation = "https://github.com/kcroker/dpsprep/wiki"

[project.optional-dependencies]
ocr = [
  "ocrmypdf (>=17)"
]

compress = [
  "dpsprep[ocr] (>=0.0.0)"
]

all = [
  "dpsprep[ocr] (>=0.0.0)"
]

[project.scripts]
dpsprep = "dpsprep.cli:dpsprep"

[dependency-groups]
lint = [
  "ruff (>=0.15)",
  "ruff-config-ivasilev @ git+https://github.com/v--/ruff-config-ivasilev.git@v0.15post7",
]

typing = [
  {include-group = "test"},
  "mypy (>=2)",
  "types-fpdf2 (>=2.8.4.20260322)"
]

test = [
  "pytest (>=9.0.3)",
]

docs = [
  "click-man (>=0.5.1)",
  "poethepoet (>=0.42)",
]

dev = [
  "dpsprep[all] (>=0.0.0)",
  "tox (>=4.50)",
  {include-group = "lint"},
  {include-group = "typing"},
  {include-group = "test"},
  {include-group = "docs"},
]

[build-system]
# uv build complains if no upper bound is set, but it updates its minor versions often, so we put a major version just to shut it up
requires = ["uv_build (>=0.10, <1)"]
build-backend = "uv_build"

# uv
[tool.uv]
resolution = "lowest-direct"

# poe
[tool.poe]
include = "./poe.toml"

# tox
[tool.tox]
env_list = ["lint", "typing", "3.11", "3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest"]]

[tool.tox.env.lint]
dependency_groups = ["lint"]
commands = [["ruff", "check"]]

[tool.tox.env.typing]
dependency_groups = ["typing"]
commands = [["mypy", "--package", "dpsprep"]]

# ruff
[tool.ruff]
extend = ".venv/share/ruff/ruff.ivasilev.toml"

[tool.ruff.lint]
ignore = [
  "D1", # undocumented-*
]

# mypy
[tool.mypy]
packages = ["dpsprep"]
strict_bytes = false

[[tool.mypy.overrides]]
module = [
  "click_man.*",
  "djvu.*",
  "ocrmypdf.*",
  "pdfrw.*",
]
ignore_missing_imports = true
